# wxPython-project-template

./: .gitignore  README.md  main.py  pyproject.toml
src/wx_python_project_template/: __init__.py  __main__.py  main.py  main_window.py
