[project]
name = "wx-python-project-template"
version = "0.1.0"
description = "wxPython desktop application template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wxpython>=4.2",
]

[project.scripts]
wx-python-app = "wx_python_project_template.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wx_python_project_template"]
